welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:25: error: missing arguments for method setCouleurBrosse in class AbstractBuggle;
follow this method with `_' if you want to treat it as a partially applied function
    setCouleurBrosse()=T()
    ^Array1:25: error: not enough arguments for method apply: (i: Int)java.awt.Color in class Array.
Unspecified value parameter i.
    setCouleurBrosse()=T()
                        ^